# octatrack-manager

./: .gitignore  README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: feedback.md
.github/workflows/: ci.yml  deploy-docs.yml  dev-release.yml
docs/: tools-tab-test-cases.md
e2e/: tools-tab.spec.ts  track-selector.spec.ts
src/: App.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  project_reader.rs
src/components/: FixMissingSamplesModal.tsx  MissingSamplesListModal.tsx  PartsPanel.tsx  ToolsPanel.tsx  TrackSelector.test.tsx  TrackSelector.tsx
src/pages/: HomePage.tsx  ProjectDetail.tsx
user-guide/: docusaurus.config.js  package-lock.json  package.json
user-guide/docs/: intro.md
user-guide/docs/features/: audio-pool.md  navigation.md  parts-editor.md  patterns.md  project-detail.md  project-discovery.md  sample-slots.md
user-guide/docs/getting-started/: installation.md  quick-start.md
user-guide/docs/reference/: compatibility.md  keyboard-shortcuts.md
user-guide/src/components/: DownloadLink.js
user-guide/src/css/: custom.css
website/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: contributing.md  intro.md
website/docs/features/: audio-pool.md  navigation.md  parts-editor.md  patterns.md  project-detail.md  project-discovery.md  sample-slots.md
website/docs/getting-started/: installation.md  quick-start.md
website/docs/reference/: compatibility.md  keyboard-shortcuts.md
website/scripts/: generate-pdf.sh
website/static/: manifest.json
(+16 files in other folders)
