[package]
name = "octatrack-manager"
version = "0.1.0"
description = "A desktop application for managing Elektron Octatrack projects"
authors = ["dferlay"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "octatrack_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ot-tools-io = { git = "https://gitlab.com/ot-tools/ot-tools-io.git", tag = "0.6.0" }
sysinfo = "0.32"
walkdir = "2"
dirs = "5"
hound = "3.5"
aifc = "0.6"
open = "5"
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "aac", "wav", "aiff"] }
rubato = "0.15"
once_cell = "1.19"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

